# post-train-moondream

./: .gitignore  README.md  main.py  pyproject.toml
rl/: grpo_demo.py  merged_inference.py
rl/demo/: grpo_demo.py  merged_inference.py  test_lora_loading.py
rl/demo/GRPO/checkpoint-1000/: rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json
rl/demo/GRPO/checkpoint-250/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
rl/demo/GRPO/checkpoint-500/: README.md  adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
rl/demo/wandb/: latest-run
rl/demo/wandb/run-20250710_222320-gonihxro/: run-gonihxro.wandb
rl/demo/wandb/run-20250710_222320-gonihxro/files/: config.yaml  requirements.txt  wandb-metadata.json
rl/demo/wandb/run-20250710_222854-cb3o2odh/: run-cb3o2odh.wandb
rl/demo/wandb/run-20250710_222854-cb3o2odh/files/: config.yaml  wandb-metadata.json
rl/demo/wandb/run-20250710_222944-h7chevdg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
rl/demo/wandb/run-20250710_235129-4xcsusyz/: run-4xcsusyz.wandb
rl/demo/wandb/run-20250710_235129-4xcsusyz/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
