[project]
name = "post-train-moondream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "einops>=0.8.1",
    "pillow>=11.3.0",
    "pyvips>=3.0.0",
    "pyvips-binary>=8.17.1",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "matplotlib>=3.8.0",
    "datasets>=4.0.0",
    "trl>=0.19.1",
    "peft>=0.16.0",
    "bitsandbytes>=0.46.1",
    "wandb>=0.21.0",
    "flash-attn>=2.8.1",
]
